# actuarialpy-core

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
actuarialpy/: __init__.py  columns.py  compare.py  completion.py  components.py  experience.py  forecast.py  metrics.py  rolling.py  trend.py
examples/: README.md  _sample_data.py  trend_decomposition.py
src/actuarialpy/: __init__.py  claimants.py  columns.py  components.py  credibility.py  decomposition.py  expected.py  experience.py  exposure.py  financial.py  frame.py  metrics.py  rolling.py  underwriting.py  weighted.py
tests/: test_ave_column_order.py  test_columns_periods.py  test_completion.py  test_credibility.py  test_decomposition.py  test_experience_components.py  test_experience_count_methods.py  test_experience_facade_extended.py  test_exposure.py  test_financial.py  test_fit_trend.py  test_metrics.py  test_rolling_cohort_forecast.py  test_seasonality.py  test_trend_compare_reporting.py  test_underwriting.py  test_view_column_order.py  test_weighted.py
